@@ -11,6 +11,8 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
     - Updated German translation (Zeno Gantner)
     - fixed ticket #538: "outline view info takes too long to refresh" by
       adding an outline cache (Zeno Gantner)
+    - fixed ticket #541: "wrong outline can get displayed for a document"
+      (Zeno Gantner)
 
 0.60 2010.04.20
     - Add FTP connection caching/sharing (SEWI)
